# audio_ecology

./: .gitignore  pyproject.toml
env/: environment.yml
notebooks/: audiomoth_metadata_inspection.ipynb
scripts/: run_birdnet_analysis.py  run_birds.py  run_chunking.py  run_inventory.py  run_uncertainty_windows.py
scripts/config_files/: config.yaml  wyke_lodge.yaml
src/: run_pipeline.py
src/audio_ecology/: cli.py  config.py  constants.py  logging_config.py  models.py  orchestrator.py  profiling.py  solar.py
src/audio_ecology/analysis/: __init__.py  birdnet.py  checkpointing.py  storage.py
src/audio_ecology/analysis/evidence/: __init__.py  noisy_or.py
src/audio_ecology/ingest/: __init__.py  chunking.py  discovery.py  inventory.py  metadata.py
tests/: conftest.py  test_birdnet.py  test_checkpointing.py  test_chunking.py  test_config.py  test_detection_uncertainty.py  test_discovery.py  test_inventory.py  test_logging_config.py  test_metadata.py  test_orchestrator.py  test_profiling.py  test_solar.py
